<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HeadingUser"
        android:layout_marginHorizontal="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/send_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserName"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/send_Roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RollUser"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="number"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/send_Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/WeightUser"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/send_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MoveUserData"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        />

</LinearLayout>