<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ShowDataActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Data"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/get_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowName"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/get_Roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowRollNumber"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/get_Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowWeight"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/go_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MoveBack"
        android:textSize="15sp"
        android:layout_marginTop="30dp"/>
</LinearLayout>